Enable pr trigger

--- a/azure-pipelines/compare-refdata.yml
+++ b/azure-pipelines/compare-refdata.yml
@@ -2,7 +2,7 @@
 # http://tardis-sn.github.io/tardis/development/continuous_integration.html
 
 trigger: none
-pr: none
+pr: [ master ]
 
 variables:
   system.debug: 'true'
