--- a/azure-pipelines/compare-refdata.yml
+++ b/azure-pipelines/compare-refdata.yml
@@ -4,6 +4,13 @@
 trigger: none
 pr: [ master ]
 
+schedules:
+  - cron: '0 0 1 * *'
+    displayName: 'Monthly test'
+    branches:
+      include:
+        - master
+
 variables:
   system.debug: false
 
@@ -45,7 +52,7 @@ jobs:
       - bash: |
           cd $(refdata.dir)/notebooks
           source activate tardis
-          jupyter nbconvert ref_data_compare.ipynb --to html --allow-errors --execute --ExecutePreprocessor.timeout=6000
+          jupyter nbconvert ref_data_compare.ipynb --to html --execute --allow-errors --ExecutePreprocessor.timeout=6000
         displayName: 'Render notebook (allow errors)'
         condition: failed()
 
