--- a/azure-pipelines/compare-refdata.yml
+++ b/azure-pipelines/compare-refdata.yml
@@ -24,6 +24,7 @@ jobs:
         parameters:
           fetchRefdata: true
           useMamba: true
+          installSSHKey: true
 
       - bash: |
           source activate tardis
@@ -56,9 +57,9 @@ jobs:
         displayName: 'Render notebook (allow errors)'
         condition: failed()
 
-      - task: PublishPipelineArtifact@1
+      - task: GitHubComment@0
         inputs:
-          targetPath: '$(refdata.dir)/notebooks/ref_data_compare.html'
-          artifactName: 'report'
-        displayName: 'Upload artifact'
-        condition: succeededOrFailed()
+          gitHubConnection: 'epassaro'
+          repositoryName: '$(Build.Repository.Name)'
+          comment: 'Succesfully created report'
+
