--- a/.github/workflows/documentation-build.yml
+++ b/.github/workflows/documentation-build.yml
@@ -27,11 +27,11 @@ jobs:
 
       - name: Build C Extensions
         shell: bash -l {0}
-        run: python setup.py build_ext --inplace
+        run: python setup.py install
 
       - name: Build Sphinx Documentation
         shell: bash -l {0}
-        run: python setup.py build_docs
+        run: cd docs && make html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
