--- a/.github/workflows/documentation-build.yml
+++ b/.github/workflows/documentation-build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Sphinx Documentation
         shell: bash -l {0}
-        run: python setup.py buid_docs
+        run: python setup.py build_docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
