--- a/.github/workflows/documentation-build.yml
+++ b/.github/workflows/documentation-build.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   documentation_build:
-    name: Documentation Build
+    name: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Sphinx Documentation
         shell: bash -l {0}
-        run: python setup.py build_docs
+        run: cd docs/ && make html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
