clean and force orphan

--- a/.github/workflows/documentation-build.yml
+++ b/.github/workflows/documentation-build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Sphinx Documentation
         shell: bash -l {0}
-        run: cd docs/ && make html
+        run: cd docs/ && make clean && make html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -39,3 +39,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html/
           publish_branch: gh-pages
+          force_orphan: true
