--- a/.github/workflows/documentation-build.yml
+++ b/.github/workflows/documentation-build.yml
@@ -29,7 +29,7 @@ jobs:
         shell: bash -l {0}
         run: python setup.py install
 
-      - name: Build Sphinx Documentation
+      - name: Make HTML
         shell: bash -l {0}
         run: cd docs/ && make clean && make html
 
